--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,9 @@ android {
 }
 
 dependencies {
-
+    implementation libs.recycleView
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
 }
